# WaveArbitrage

./: .bazelrc  .gitignore  .gitmodules  .vimrc  BUILD.bazel  Makefile  README.md  WORKSPACE  backtest.cpp  backtest.py  feed.h  feed_test.cpp  flip.py  flipper.cc  market_data.proto  portfolio.h  portfolio_test.cpp  results.txt  scraper.py  simulate.cpp  strategy.h  strategy_test.cpp  util.h  util_test.cpp
paper/: Makefile  paper.tex  references.bib  short_paper.tex
