load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_proto_library")
load("@com_google_protobuf//:protobuf.bzl", "py_proto_library")
load("@rules_foreign_cc//tools/build_defs:cmake.bzl", "cmake_external")

proto_library(
    name = "market_data_proto",
    srcs = ["market_data.proto"],
    deps = ["@com_google_protobuf//:timestamp_proto"],
)

cc_proto_library(
    name = "timestamp_cc_proto",
    deps = ["@com_google_protobuf//:timestamp_proto"],
)

cc_proto_library(
    name = "duration_cc_proto",
    deps = ["@com_google_protobuf//:duration_proto"],
)

cc_proto_library(
    name = "market_data_cc_proto",
    deps = [":market_data_proto"],
)

py_proto_library(
    name = "market_data_py_proto",
    srcs = ["market_data.proto"],
    deps = ["@com_google_protobuf//:protobuf_python"],
)

py_binary(
    name = "scraper",
    srcs = ["scraper.py"],
    deps = [
        ":market_data_py_proto",
    ],
)

#cc_library(
#    name = "dynamic_histogram",
#    srcs = ["lib/DynamicHistogram/cpp/src/DynamicHistogram.cpp"],
#    hdrs = ["lib/DynamicHistogram/cpp/src/DynamicHistogram.h"],
#    copts = [
#        "-std=c++17",
#        "-Ilib/DynamicHistogram/cpp/src"
#    ],
#)

cc_binary(
    name = "simulate",
    srcs = ["simulate.cpp"],
    deps = [
      "@dynamic_histogram//:dynamic_histogram",
    ],
    linkopts = ["-lpthread"],
)

cc_binary(
    name = "backtest",
    srcs = ["backtest.cpp"],
    deps = [
        ":feed",
        ":market_data_cc_proto",
        ":strategy",
        ":util",
    ],
    linkopts = ["-lpthread"],
    copts = ["-std=c++17"]
)

cc_library(
    name = "portfolio",
    srcs = [],
    hdrs = ["portfolio.h"],
    deps = [
        "@com_github_google_glog//:glog",
    ],
)

cc_test(
    name = "portfolio_test",
    srcs = ["portfolio_test.cpp"],
    deps = [
        ":portfolio",
        "@gtest//:gtest",
        "@gtest//:gtest_main"
    ],
)

cc_library(
    name = "strategy",
    srcs = [],
    hdrs = ["strategy.h"],
    deps = [
        ":portfolio",
        "@com_github_google_glog//:glog",
    ],
)

cc_test(
    name = "strategy_test",
    srcs = ["strategy_test.cpp"],
    deps = [
        ":strategy",
        "@gtest//:gtest",
        "@gtest//:gtest_main"
    ],
)

cc_library(
    name = "feed",
    srcs = [],
    hdrs = ["feed.h"],
    deps = [
        ":market_data_cc_proto",
        ":portfolio",
        ":util",
        "@com_github_google_glog//:glog",
    ],
)

cc_test(
    name = "feed_test",
    srcs = ["feed_test.cpp"],
    deps = [
        ":feed",
        "@gtest//:gtest",
        "@gtest//:gtest_main"
    ],
)

cc_library(
    name = "util",
    srcs = [],
    hdrs = ["util.h"],
    deps = [
        "@com_github_google_glog//:glog",
        "@dynamic_histogram//:dynamic_histogram",
        ":duration_cc_proto",
        ":timestamp_cc_proto",
    ],
)

cc_test(
    name = "util_test",
    srcs = ["util_test.cpp"],
    deps = [
        ":util",
        "@gtest//:gtest",
        "@gtest//:gtest_main",
        ":duration_cc_proto",
        ":timestamp_cc_proto",
    ],
)
